# Stanford-Online-Course

./: README.md
CS146S-The-Modern-Software-Developer/2025-Fall/: pyproject.toml
CS146S-The-Modern-Software-Developer/2025-Fall/modern-software-dev-assignments/: pyproject.toml
CS146S-The-Modern-Software-Developer/2025-Fall/modern-software-dev-assignments/week1/: chain_of_thought.py  k_shot_prompting.py  rag.py  reflexion.py  self_consistency_prompting.py  tool_calling.py
CS146S-The-Modern-Software-Developer/2025-Fall/modern-software-dev-assignments/week2/: README.md  writeup.md
CS146S-The-Modern-Software-Developer/2025-Fall/modern-software-dev-assignments/week2/app/: schemas.py
CS146S-The-Modern-Software-Developer/2025-Fall/modern-software-dev-assignments/week2/app/routers/: action_items.py  notes.py
CS146S-The-Modern-Software-Developer/2025-Fall/modern-software-dev-assignments/week2/app/services/: extract.py
CS146S-The-Modern-Software-Developer/2025-Fall/modern-software-dev-assignments/week2/frontend/: index.html
CS146S-The-Modern-Software-Developer/2025-Fall/modern-software-dev-assignments/week2/tests/: test_extract.py
CS224W-Machine-Learning-with-Graphs/: CS224W_Colab0.ipynb  CS224W_Colab1_2022_23.ipynb  CS224W_Colab2.ipynb  CS224W_Colab3_2023.ipynb  CS224W_Colab4.ipynb
CS224W-Machine-Learning-with-Graphs/2023-Fall/: CS224W_Colab0.ipynb  CS224W_Colab5.ipynb
CS336-Language-Modeling-from-Scratch/2026-Spring/assignment1-basics/: .gitignore  pyproject.toml  test.ipynb  train_tokenizer.py
(+13 files in other folders)
